hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics5.php.rust_elab.exp
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type arguments violate their constraints (Typing[4323])
  File "tconst_on_generics5.php", line 25, characters 31-32:
  `T1` is a constrained type parameter
  File "tconst_on_generics5.php", line 25, characters 37-39:
  This type constraint is violated
  File "tconst_on_generics5.php", line 25, characters 37-39:
  Expected `Box`
  File "tconst_on_generics5.php", line 25, characters 47-47:
  But got `B`
